test/asm/invalid-jr.err
error: invalid-jr.asm(3):
    jr target must be between -128 and 127 bytes away, not -258; use jp instead
error: Assembly aborted (1 error)!
